# FluentUI

./: .gitignore  CMakeLists.txt
FluentWidgets/: CMakeLists.txt  fluentwidgets.qrc  fluentwidgets_rc.py
FluentWidgets/include/: FluentWidget.h
FluentWidgets/include/Common/: Config.h  Icon.h  StyleSheet.h  tool.h
FluentWidgets/include/Widgets/: Button.h  SwitchButton.h
FluentWidgets/qss/dark/: button.qss  switch_button.qss
FluentWidgets/qss/light/: button.qss  switch_button.qss
FluentWidgets/src/: FluentWidget.cpp
FluentWidgets/src/Common/: Icon.cpp  StyleSheet.cpp  tool.cpp
FluentWidgets/src/Widgets/: Button.cpp  SwitchButton.cpp
FluentWidgets/src/button/: Button.cpp
example/: CMakeLists.txt
example/buttonExample/: ButtonPlane.cpp  ButtonPlane.h  CMakeLists.txt  main.cpp
example/test/: test.cpp
example/testDemo/: CMakeLists.txt  image.qrc  image_rc.py  main.cpp
